buttons and sliders

--- a/exercise_2/aggregation.ipynb
+++ b/exercise_2/aggregation.ipynb
@@ -267,8 +267,7 @@
    ],
    "source": [
     "for i in range(len(data_json)):\n",
-    "    if i['country'] == 'Russia':\n",
-    "        "
+    "    if i['country'] == 'Russia':"
    ]
   },
   {
@@ -278,7 +277,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -291,7 +292,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
