messy but working

--- a/exercise_2/aggregation.ipynb
+++ b/exercise_2/aggregation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -45,17 +45,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -115,15 +115,78 @@
        "</div>"
       ],
       "text/plain": [
-       "     Country  Year Gender   Medal  City\n",
-       "0  Australia  1994      M  Bronze     1\n",
-       "1  Australia  1998      W  Bronze     1\n",
-       "2  Australia  2002      M    Gold     1\n",
-       "3  Australia  2002      W    Gold     1\n",
-       "4  Australia  2006      M    Gold     1"
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>W</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>W</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -142,19 +205,10 @@
     {
      "data": {
       "text/plain": [
-       "array(['Australia', 'Austria', 'Belarus', 'Belgium', 'Bulgaria', 'Canada',\n",
-       "       'China', 'Croatia', 'Czech Republic', 'Czechoslovakia', 'Denmark',\n",
-       "       'East Germany', 'Estonia', 'Finland', 'France', 'Germany',\n",
-       "       'Hungary', 'Italy', 'Japan', 'Kazakhstan', 'Korea, North',\n",
-       "       'Korea, South', 'Latvia', 'Liechtenstein', 'Luxembourg',\n",
-       "       'Netherlands', 'New Zealand', 'Norway', 'Poland', 'Romania',\n",
-       "       'Russia', 'Slovakia', 'Slovenia', 'Soviet Union', 'Spain',\n",
-       "       'Sweden', 'Switzerland', 'Ukraine', 'Unified Team',\n",
-       "       'Unified Team of Germany', 'United Kingdom', 'United States',\n",
-       "       'Uzbekistan', 'West Germany', 'Yugoslavia'], dtype=object)"
+       "array(['Australia', 'Austria', 'Belarus', 'Belgium', 'Bulgaria', 'Canada',\n       'China', 'Croatia', 'Czech Republic', 'Czechoslovakia', 'Denmark',\n       'East Germany', 'Estonia', 'Finland', 'France', 'Germany',\n       'Hungary', 'Italy', 'Japan', 'Kazakhstan', 'Korea, North',\n       'Korea, South', 'Latvia', 'Liechtenstein', 'Luxembourg',\n       'Netherlands', 'New Zealand', 'Norway', 'Poland', 'Romania',\n       'Russia', 'Slovakia', 'Slovenia', 'Soviet Union', 'Spain', 'Sweden',\n       'Switzerland', 'Ukraine', 'Unified Team', 'Unified Team of Germany',\n       'United Kingdom', 'United States', 'Uzbekistan', 'West Germany',\n       'Yugoslavia'], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -211,11 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-4db84da95252>, line 8)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-4db84da95252>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    if c in ['']\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ],
+     "output_type": "error"
+    }
+   ],
    "source": [
     "def create_json(df):\n",
     "    lis=[]\n",
@@ -231,38 +294,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'create_json' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-1efa465ab99d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_json\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrp_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'create_json' is not defined"
+     ],
+     "output_type": "error"
+    }
+   ],
    "source": [
     "data_json=create_json(grp_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'country': 'Australia',\n",
-       " 'medalCounts': [{'Year': 1994,\n",
-       "   'men': [0, 0, 1],\n",
-       "   'women': [0, 0, 0],\n",
-       "   'x': [0, 0, 0]},\n",
-       "  {'Year': 1998, 'men': [0, 0, 0], 'women': [0, 0, 0], 'x': [0, 0, 0]},\n",
-       "  {'Year': 2002, 'men': [1, 0, 0], 'women': [0, 0, 0], 'x': [0, 0, 0]},\n",
-       "  {'Year': 2006, 'men': [1, 0, 0], 'women': [0, 0, 0], 'x': [0, 0, 0]}]}"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-10-831360963d48>, line 2)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-831360963d48>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if i['country'] == 'Russia':\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
