adding corrected data.json

--- a/exercise_2/aggregation.ipynb
+++ b/exercise_2/aggregation.ipynb
@@ -205,7 +205,16 @@
     {
      "data": {
       "text/plain": [
-       "array(['Australia', 'Austria', 'Belarus', 'Belgium', 'Bulgaria', 'Canada',\n       'China', 'Croatia', 'Czech Republic', 'Czechoslovakia', 'Denmark',\n       'East Germany', 'Estonia', 'Finland', 'France', 'Germany',\n       'Hungary', 'Italy', 'Japan', 'Kazakhstan', 'Korea, North',\n       'Korea, South', 'Latvia', 'Liechtenstein', 'Luxembourg',\n       'Netherlands', 'New Zealand', 'Norway', 'Poland', 'Romania',\n       'Russia', 'Slovakia', 'Slovenia', 'Soviet Union', 'Spain', 'Sweden',\n       'Switzerland', 'Ukraine', 'Unified Team', 'Unified Team of Germany',\n       'United Kingdom', 'United States', 'Uzbekistan', 'West Germany',\n       'Yugoslavia'], dtype=object)"
+       "array(['Australia', 'Austria', 'Belarus', 'Belgium', 'Bulgaria', 'Canada',\n",
+       "       'China', 'Croatia', 'Czech Republic', 'Czechoslovakia', 'Denmark',\n",
+       "       'East Germany', 'Estonia', 'Finland', 'France', 'Germany',\n",
+       "       'Hungary', 'Italy', 'Japan', 'Kazakhstan', 'Korea, North',\n",
+       "       'Korea, South', 'Latvia', 'Liechtenstein', 'Luxembourg',\n",
+       "       'Netherlands', 'New Zealand', 'Norway', 'Poland', 'Romania',\n",
+       "       'Russia', 'Slovakia', 'Slovenia', 'Soviet Union', 'Spain', 'Sweden',\n",
+       "       'Switzerland', 'Ukraine', 'Unified Team', 'Unified Team of Germany',\n",
+       "       'United Kingdom', 'United States', 'Uzbekistan', 'West Germany',\n",
+       "       'Yugoslavia'], dtype=object)"
       ]
      },
      "execution_count": 5,
@@ -219,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -257,7 +266,7 @@
     "        d={}\n",
     "        d['Year']=y\n",
     "        d['men']=get_medList(df[(df['Year']==y) & (df['Gender']=='M')])\n",
-    "        d['women']=get_medList(df[(df['Year']==y) & (df['Gender']=='F')])\n",
+    "        d['women']=get_medList(df[(df['Year']==y) & (df['Gender']=='W')])\n",
     "        d['x']=get_medList(df[(df['Year']==y) & (df['Gender']=='X')])\n",
     "        medCountLis.append(d)\n",
     "    return medCountLis"
@@ -269,16 +278,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-4db84da95252>, line 8)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-4db84da95252>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    if c in ['']\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ],
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_json(df):\n",
     "    lis=[]\n",
@@ -287,7 +287,7 @@
     "        d={}\n",
     "        d['country']=c\n",
     "        d['medalCounts']=get_medalCounts(df[df['Country']==c])\n",
-    "        if c in ['']\n",
+    "        #if c in ['']\n",
     "        lis.append(d)\n",
     "    return lis"
    ]
@@ -298,19 +298,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'create_json' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-1efa465ab99d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_json\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrp_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'create_json' is not defined"
-     ],
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_json=create_json(grp_df)"
    ]
@@ -325,10 +313,10 @@
     {
      "ename": "SyntaxError",
      "evalue": "unexpected EOF while parsing (<ipython-input-10-831360963d48>, line 2)",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-831360963d48>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if i['country'] == 'Russia':\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
@@ -343,9 +331,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -358,7 +344,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
