useful message here

--- a/final/final_eda.ipynb
+++ b/final/final_eda.ipynb
@@ -965,7 +965,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data['SUBMITTED_DECISION_DELTA'] = data['SUBMITTED_DECISION_DELTA'] / pd.Timedelta(days=1)"
@@ -2496,9 +2498,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py36envir]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py36envir-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2510,7 +2512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
